# omnomon

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  event.rs  history.rs  main.rs  state.rs  util.rs
src/collector/: battery.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs  system_info.rs  thermal.rs
src/ui/: battery.rs  cpu.rs  dashboard.rs  disk.rs  gpu.rs  header.rs  help.rs  memory.rs  mod.rs  network.rs  process.rs  theme.rs  thermal.rs
