[package]
name = "omnomon"
version = "0.1.0"
edition = "2021"
description = "Unified system monitor for Linux laptops with NVIDIA GPUs"
license = "MIT"
authors = ["Sathika Shervin Hettiarachchi"]

[features]
default = ["nvidia"]
nvidia = ["nvml-wrapper"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
sysinfo = "0.37"
battery = "0.7"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
libc = "0.2"

[dependencies.nvml-wrapper]
version = "0.11"
optional = true

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
